--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://szeitlin.github.io/"
 languageCode = "en-us"
 title = ""
-theme = "ananke"
+theme = 'ananke'
 pygmentsCodeFences = true
