--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 baseURL = "https://szeitlin.github.io/"
 languageCode = "en-us"
-title = ""
+title = "Always Be Getting Data (ABGD)"
 theme = "ananke"
 pygmentsCodeFences = true
